# kernel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml  temp
.cargo/: config.toml
.github/workflows/: ci.yml
arch/aarch64/: Cargo.toml
arch/aarch64/src/: boot.rs  cpu.rs  exceptions.rs  lib.rs  task.rs
arch/aarch64/src/asm/: boot.S  exceptions.S  task.S
arch/x86_64/: Cargo.toml
arch/x86_64/src/: boot.rs  cpu.rs  lib.rs  power.rs  syscall.rs  task.rs  time.rs
docs/testing/: behavior-inventory.md
drivers/gpu/: Cargo.toml
drivers/gpu/src/: lib.rs
drivers/nvme/: Cargo.toml
drivers/pci/: Cargo.toml
drivers/simple-gpu/: Cargo.toml
drivers/virtio-blk/: Cargo.toml  README.md
drivers/virtio-blk/src/: lib.rs
drivers/virtio-gpu/: Cargo.toml  README.md
drivers/virtio-gpu/src/: lib.rs
drivers/virtio-input/: Cargo.toml  README.md
drivers/virtio-input/src/: keymap.rs  lib.rs
drivers/virtio-net/: Cargo.toml  README.md
drivers/virtio-net/src/: lib.rs
drivers/virtio-transport/: Cargo.toml  README.md
drivers/virtio-transport/src/: lib.rs
drivers/xhci/: Cargo.toml
fs/devtmpfs/: Cargo.toml
fs/devtmpfs/src/: device_ops.rs  dir_ops.rs  lib.rs  node.rs  superblock.rs
fs/devtmpfs/src/devices/: console.rs  full.rs  mod.rs  null.rs  urandom.rs  zero.rs
fs/ext4/: Cargo.toml
fs/ext4/src/: fat.rs  lib.rs
fs/initramfs/: Cargo.toml
fs/initramfs/src/: lib.rs
fs/procfs/: Cargo.toml
fs/procfs/src/: lib.rs
fs/sysfs/: Cargo.toml
fs/sysfs/src/: lib.rs
fs/tmpfs/: Cargo.toml
fs/tmpfs/src/: dir_ops.rs  file_ops.rs  lib.rs  node.rs  superblock.rs  symlink_ops.rs
fs/tty/: Cargo.toml
fs/tty/src/: lib.rs  pty.rs
gpu/: Cargo.toml  README.md
hal/src/: console.rs  mmu.rs
hal/src/aarch64/: mmu.rs
hal/src/allocator/: intrusive_list.rs
hal/src/allocator/slab/: cache.rs
hal/src/x86_64/boot/: README.md
hal/src/x86_64/cpu/: exceptions.rs
hal/src/x86_64/interrupts/: apic.rs  ioapic.rs
hal/src/x86_64/mem/: frame_alloc.rs
levitate/: Cargo.toml  build.rs
levitate/src/: block.rs  config.rs  fs.rs  gpu.rs  init.rs  input.rs  main.rs  memory.rs  process.rs  virtio.rs
levitate/src/arch/aarch64/: linker.ld
levitate/src/arch/x86_64/: linker.ld
levitate/src/arch/x86_64/asm/: boot.S  gdt.S  long_mode.S  page_tables.S
levitate/src/boot/: dtb.rs  limine.rs  mod.rs
levitate/src/loader/: elf.rs
lib/error/: Cargo.toml
lib/hal/: Cargo.toml  README.md
lib/hal/src/: console.rs  interrupts.rs  lib.rs  mmu.rs  traits.rs  virtio.rs
lib/hal/src/aarch64/: gic.rs  interrupts.rs  timer.rs
lib/hal/src/aarch64/mmu/: constants.rs  init.rs  mapping.rs  mod.rs  ops.rs  tests.rs  types.rs
lib/hal/src/allocator/: buddy.rs  intrusive_list.rs  mod.rs
lib/hal/src/allocator/slab/: cache.rs  mod.rs  page.rs
lib/hal/src/mem/: constants.rs  mod.rs
lib/hal/src/x86_64/: mod.rs
lib/hal/src/x86_64/boot/: mod.rs
lib/hal/src/x86_64/cpu/: README.md  exceptions.rs  gdt.rs
lib/hal/src/x86_64/interrupts/: apic.rs  ioapic.rs  mod.rs  state.rs
lib/hal/src/x86_64/io/: README.md  console.rs  mod.rs  serial.rs
lib/hal/src/x86_64/mem/: README.md  frame_alloc.rs  mmu.rs  paging.rs
lib/term/: Cargo.toml
lib/traits/input-device/: Cargo.toml  README.md
lib/traits/input-device/src/: lib.rs
lib/traits/network-device/: Cargo.toml  README.md
lib/traits/network-device/src/: lib.rs
lib/traits/storage-device/: Cargo.toml  README.md
lib/traits/storage-device/src/: lib.rs
lib/types/: Cargo.toml
lib/types/src/: lib.rs
lib/utils/: Cargo.toml
lib/utils/src/: cpio.rs  entropy.rs  lib.rs
mm/: Cargo.toml
mm/src/: heap.rs  lib.rs  vma.rs
mm/src/user/: auxv.rs  layout.rs  mapping.rs  mod.rs  page_table.rs  stack.rs
pci/: README.md
sched/: Cargo.toml
sched/src/: fd_table.rs  fork.rs  lib.rs  process.rs  process_table.rs  scheduler.rs  thread.rs  user.rs
src/: block.rs  boot.rs  console_gpu.rs  cursor.rs  exceptions.rs  fs.rs  gpu.rs  init.rs  input.rs  logger.rs  main.rs  net.rs  pci.rs  syscall.rs  terminal.rs  virtio.rs
src/arch/: mod.rs
src/arch/aarch64/: boot.rs  cpu.rs  exceptions.rs  mod.rs  task.rs
src/arch/aarch64/asm/: exceptions.S  task.S
src/arch/x86_64/: boot.S  boot.rs  cpu.rs  linker.ld  mod.rs  syscall.rs  task.rs
src/boot/: dtb.rs  limine.rs  multiboot.rs
src/fs/: ext4.rs  fat.rs  initramfs.rs  mod.rs  mount.rs  pipe.rs  tmpfs.rs
src/fs/tmpfs/: dir_ops.rs  file_ops.rs  mod.rs  node.rs  superblock.rs  symlink_ops.rs
src/fs/tty/: mod.rs
src/fs/vfs/: dentry.rs  dispatch.rs  error.rs  inode.rs  mod.rs  superblock.rs
src/loader/: elf.rs
src/memory/: buddy.rs  heap.rs  mod.rs  page.rs  user.rs  vma.rs
src/memory/user/: auxv.rs  mapping.rs  mod.rs  page_table.rs  stack.rs
src/syscall/: epoll.rs  fs.rs  helpers.rs  mm.rs  mod.rs  process.rs  signal.rs  sync.rs  sys.rs  time.rs
src/syscall/fs/: dir.rs  fd.rs  link.rs  mod.rs  mount.rs  open.rs  read.rs  stat.rs  write.rs
src/syscall/process/: groups.rs  mod.rs  resources.rs  thread.rs
src/task/: fd_table.rs  mod.rs  process.rs  scheduler.rs  thread.rs  user.rs  user_mm.rs
syscall/: Cargo.toml
syscall/src/: epoll.rs  helpers.rs  lib.rs  mm.rs  signal.rs  sync.rs  sys.rs  time.rs  types.rs
syscall/src/fs/: dir.rs  fd.rs  link.rs  mod.rs  mount.rs  open.rs  read.rs  stat.rs  statx.rs  write.rs
syscall/src/process/: arch_prctl.rs  groups.rs  identity.rs  lifecycle.rs  mod.rs  resources.rs  sched.rs  thread.rs
term/: Cargo.toml  README.md
utils/src/: cpio.rs
vfs/: Cargo.toml
vfs/src/: dentry.rs  dispatch.rs  error.rs  file.rs  inode.rs  lib.rs  mode.rs  mount.rs  ops.rs  path.rs
