[workspace]
members = [
    "hal",
    "utils",
    "error",
    "term",
    "pci",
    "gpu",
    "mm",  # TEAM_422: Memory management crate
]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "allow"
unconditional_panic = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
missing_safety_doc = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
match_same_arms = "deny"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
virtio-drivers = "0.12"
embedded-graphics = "0.8.1"
bitflags = "2.10.0"
aarch64-cpu = "11.2"
spin = { version = "0.10", default-features = false, features = ["once", "lazy", "barrier", "rwlock", "spin_mutex"] }
hashbrown = { version = "0.14", default-features = false, features = ["inline-more", "ahash"] }
x86_64 = "0.15"
volatile = "0.6"
bytemuck = { version = "1.21", features = ["derive"] }
acpi = "5.0"
aml = "0.16"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true
codegen-units = 1

# Kernel package at workspace root
[package]
name = "levitate-kernel"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[lints]
workspace = true

[features]
default = []
verbose = []
diskless = []
multitask-demo = []
verbose-syscalls = []

[dependencies]
los_hal = { path = "hal" }
los_utils = { path = "utils" }
los_error = { path = "error" }
los_term = { path = "term" }
los_pci = { path = "pci" }
los_gpu = { path = "gpu" }
linked_list_allocator = "0.10.5"
virtio-drivers.workspace = true
embedded-graphics.workspace = true
log = "0.4"
limine = "0.5"
embedded-sdmmc = { version = "0.9", default-features = false }
ext4-view = { version = "0.9", default-features = false }
bitflags.workspace = true
aarch64-cpu.workspace = true
x86_64.workspace = true
volatile.workspace = true
bytemuck.workspace = true
acpi.workspace = true
aml.workspace = true
linux-raw-sys = { version = "0.12.1", default-features = false, features = ["general", "errno", "ioctl", "no_std"] }

[build-dependencies]
cc = "1.0"
