# LevitateOS Kernel Workspace
# TEAM_422: Modular kernel architecture

[workspace]
resolver = "2"
members = [
    # The kernel binary
    "levitate",

    # Architecture support
    "arch/aarch64",
    "arch/x86_64",

    # Core subsystems
    "mm",
    "sched",
    "vfs",
    "syscall",

    # Filesystem implementations
    "fs/tmpfs",
    "fs/tty",
    "fs/ext4",
    "fs/initramfs",

    # Drivers
    "drivers/pci",
    "drivers/gpu",
    "drivers/virtio-transport",
    "drivers/virtio-blk",
    "drivers/virtio-gpu",
    "drivers/virtio-input",
    "drivers/virtio-net",
    "drivers/nvme",
    "drivers/xhci",
    "drivers/simple-gpu",

    # Libraries
    "lib/hal",
    "lib/utils",
    "lib/error",
    "lib/term",
    "lib/types",

    # Traits
    "lib/traits/input-device",
    "lib/traits/network-device",
    "lib/traits/storage-device",
]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "allow"
unconditional_panic = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
missing_safety_doc = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
match_same_arms = "deny"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
ptr_as_ptr = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
virtio-drivers = "0.12"
embedded-graphics = "0.8.1"
bitflags = "2.10.0"
aarch64-cpu = "11.2"
spin = { version = "0.10", default-features = false, features = ["once", "lazy", "barrier", "rwlock", "spin_mutex"] }
hashbrown = { version = "0.14", default-features = false, features = ["inline-more", "ahash"] }
x86_64 = "0.15"
volatile = "0.6"
bytemuck = { version = "1.21", features = ["derive"] }
acpi = "5.0"
aml = "0.16"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true
codegen-units = 1
