[package]
name = "los_gpu"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[lints]
workspace = true

[dependencies]
los_hal = { path = "../hal" }
# TEAM_336: Removed los_pci - now generic over transport type
# TEAM_141: Use workspace dependencies for version consistency
virtio-drivers.workspace = true
embedded-graphics.workspace = true
