[package]
name = "los_sched"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
# TEAM_422: Internal feature for spawn_from_elf (requires ELF loader)
_spawn_from_elf = []

[dependencies]
los_hal = { path = "../lib/hal" }
los_error = { path = "../lib/error" }
los_utils = { path = "../lib/utils" }
los_mm = { path = "../mm" }
los_vfs = { path = "../vfs" }
log = "0.4"
bitflags = { workspace = true }
hashbrown = { workspace = true }

# Architecture-specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
los_arch_aarch64 = { path = "../arch/aarch64" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
los_arch_x86_64 = { path = "../arch/x86_64" }
