[package]
name = "los_syscall"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
verbose-syscalls = []

[dependencies]
los_hal = { path = "../lib/hal" }
los_error = { path = "../lib/error" }
los_utils = { path = "../lib/utils" }
los_mm = { path = "../mm" }
los_sched = { path = "../sched" }
los_vfs = { path = "../vfs" }
los_fs_tty = { path = "../fs/tty" }
los_types = { path = "../lib/types" }
log = "0.4"
bitflags = { workspace = true }
linux-raw-sys = { version = "0.12.1", default-features = false, features = ["general", "errno", "ioctl", "no_std"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
los_arch_x86_64 = { path = "../arch/x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
los_arch_aarch64 = { path = "../arch/aarch64" }
