[package]
name = "los_vfs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
los_hal = { path = "../lib/hal" }
los_error = { path = "../lib/error" }
los_utils = { path = "../lib/utils" }
los_types = { path = "../lib/types" }
log = "0.4"
bitflags = { workspace = true }
hashbrown = { workspace = true }
linux-raw-sys = { version = "0.12.1", default-features = false, features = ["errno", "general", "no_std"] }
