[package]
name = "virtio-net"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "VirtIO Network driver for LevitateOS"
license = "MIT"

[dependencies]
virtio-drivers = { workspace = true }
virtio-transport = { path = "../virtio-transport" }
network-device = { path = "../../lib/traits/network-device" }
spin = { workspace = true }
log = "0.4"

[features]
default = []
std = []  # TEAM_334: Enable host-side testing per kernel SOP Rule 15

[lints]
workspace = true
