[package]
name = "virtio-transport"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Unified VirtIO transport abstraction for LevitateOS"
license = "MIT"

[dependencies]
virtio-drivers = { workspace = true }
spin = { workspace = true }
log = "0.4"
zerocopy = "0.8"

# TEAM_334: Optional features for arch-specific transports
[features]
default = []
std = []  # Enable host-side testing per kernel SOP Rule 15
pci = []  # Enable PCI transport support
mmio = [] # Enable MMIO transport support

[lints]
workspace = true
