[package]
name = "los_fs_tty"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
los_vfs = { path = "../../vfs" }
los_sched = { path = "../../sched" }
los_error = { path = "../../lib/error" }
los_utils = { path = "../../lib/utils" }
los_term = { path = "../../lib/term" }
los_hal = { path = "../../lib/hal" }
log = "0.4"
bitflags = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
los_arch_x86_64 = { path = "../../arch/x86_64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
los_arch_aarch64 = { path = "../../arch/aarch64" }
