[package]
name = "los_types"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
# TEAM_464: Use linux-raw-sys constants as canonical source for S_* mode constants
linux-raw-sys = { version = "0.12.1", default-features = false, features = ["general", "no_std"] }
