[package]
name = "los_utils"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[lints]
workspace = true

[features]
default = []
std = []

[dependencies]
spin = { workspace = true }
hashbrown = { workspace = true }
# TEAM_464: Use linux-raw-sys constants as canonical source for S_* mode constants
linux-raw-sys = { version = "0.12.1", default-features = false, features = ["general", "no_std"] }
