[package]
name = "input-device"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Input device trait for LevitateOS - Theseus-inspired pattern"
license = "MIT"

[dependencies]
spin = { workspace = true }

[features]
default = []
std = []  # TEAM_334: Enable host-side testing per kernel SOP Rule 15

[lints]
workspace = true
